# ExerciciosAulas-Computacao-de-Elevado-Desempenho

./: README.md
Desktop/Pedro Mestrado/CED/Aulas/Aula4/: CMakeLists.txt  ExplicacaoCodigos.txt  farao.cpp  farao.h  heat_diffusion_2d.cpp
